# telegram_base

./: .gitignore  Cargo.toml  melhorias.txt  shell.nix
api_bot/: .gitignore
api_bot/backend/: index.ts  package.json
api_bot/backend/db/: schema.ts
api_bot/painel-app/: index.html  package.json
api_bot/painel-app/src/: App.tsx
api_bot/painel-app/src/components/: dashboard-cards.tsx  layout.tsx
api_bot/painel-app/src/pages/: Dashboard.tsx  Login.tsx  Settings.tsx
api_bot/user-app/: README.md  index.html  package.json  vite.config.ts
api_bot/user-app/src/: App.tsx  index.css
api_bot/user-app/src/pages/: Register.tsx
application/: config  package.json
application/src/: index.html  styles.css
application/src-tauri/: Cargo.toml  tauri.conf.json
application/src-tauri/capabilities/: default.json
application/src-tauri/src/: commands.rs  lib.rs  main.rs
application/src-tauri/src/modules/: mod.rs
application/src-tauri/src/modules/FileManager/: file.rs  maneger.rs  mod.rs  parser.rs
src/: api.rs  bot.rs  main.rs  parser.rs  tray.rs
