[package]
name = "telegram_base"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
futures = "0.3.31"
memmap2 = "0.9.9"
reqwest = "0.12.28"
teloxide = { version = "0.17.0", features = ["macros"] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tray-icon = "0.21.3"
turso = "0.4.4"
